--- a/tutorials/templates/student_dashboard.html
+++ b/tutorials/templates/student_dashboard.html
@@ -9,5 +9,33 @@
     <a href="{% url 'view_bookings' %}" class="btn btn-primary btn-lg">View Your Bookings</a>
     <a href="{% url 'request_booking' %}" class="btn btn-success btn-lg">Request a Booking</a>
   </div>
+
+  <div class="mt-4">
+    <h2>Your Bookings Calendar</h2>
+    <div id="calendar"></div>
+  </div>
 </div>
+{% endblock %}
+
+{% block extra_scripts %}
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    var calendarEl = document.getElementById('calendar');
+    var calendar = new FullCalendar.Calendar(calendarEl, {
+        initialView: 'dayGridMonth',
+        headerToolbar: {
+            left: 'prev,next today',
+            center: 'title',
+            right: 'dayGridMonth,timeGridWeek,timeGridDay'
+        },
+        events: '/api/calendar/',  // API endpoint to fetch student bookings
+        eventClick: function(info) {
+            alert('Booking: ' + info.event.title);
+        },
+        editable: false,  // Disable drag-and-drop
+        selectable: false
+    });
+    calendar.render();
+});
+</script>
 {% endblock %}
