tutor add availability

--- a/tutorials/templates/tutor_profile.html
+++ b/tutorials/templates/tutor_profile.html
@@ -21,9 +21,9 @@
         
         <!-- Render the form using the bootstrap_form partial -->
         {% include 'partials/bootstrap_form.html' with form=form %}
-        
+
         <button type="submit" class="btn btn-success">Save Changes</button>
-        <a href="{% url 'dashboard' %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url 'tutor_availability' %}" class="btn btn-secondary">Cancel</a>
       </form>
     </div>
   </div>
