--- a/tutorials/templates/dashboard.html
+++ b/tutorials/templates/dashboard.html
@@ -48,7 +48,7 @@
                             <td>
                                 {% if user.account_type == "tutor" %}
                                     {{ invoice.student.first_name }} {{ invoice.student.last_name }}
-                                {% if user.account_type == "student" %}
+                                {% elif user.account_type == "student" %}
                                     {{ invoice.tutor.first_name }} {{ invoice.tutor.last_name }}
                                 {% endif %}
                             </td>
@@ -57,8 +57,8 @@
                             <td>{{ invoice.status }}</td>
                         </tr>
                     {% endfor %}
-                {/tbody}
-            {/table}
+                </tbody>
+            </table>
         {% else %}
             <p>No invoices yet!</p>
         {% endif %}
