--- a/tutorials/templates/tutor_profile.html
+++ b/tutorials/templates/tutor_profile.html
@@ -1,4 +1,3 @@
-<!-- templates/tutor_profile.html -->
 {% extends 'base_content.html' %}
 
 {% block title %}Update Teaching Profile{% endblock %}
@@ -19,12 +18,37 @@
           </div>
         {% endif %}
         
-        <!-- Render the form using the bootstrap_form partial -->
-        {% include 'partials/bootstrap_form.html' with form=form %}
+        <!-- Render Teaching Languages -->
+        <div class="form-group">
+          <label for="id_languages">Teaching Languages</label>
+          {{ form.languages }}
+          {% if form.languages.errors %}
+            <div class="text-danger">
+              {% for error in form.languages.errors %}
+                <p>{{ error }}</p>
+              {% endfor %}
+            </div>
+          {% endif %}
+        </div>
 
+        <!-- Render Specializations -->
+        <div class="form-group">
+          <label for="id_specializations">Specializations</label>
+          {{ form.specializations }}
+          {% if form.specializations.errors %}
+            <div class="text-danger">
+              {% for error in form.specializations.errors %}
+                <p>{{ error }}</p>
+              {% endfor %}
+            </div>
+          {% endif %}
+        </div>
+
+        <!-- Submit and Cancel buttons -->
         <button type="submit" class="btn btn-success">Save Changes</button>
         <a href="{% url 'tutor_availability' %}" class="btn btn-secondary">Cancel</a>
       </form>
     </div>
   </div>
 {% endblock %}
+
