Added ability for tutor to choose hourly rate

--- a/tutorials/templates/dashboard.html
+++ b/tutorials/templates/dashboard.html
@@ -55,7 +55,7 @@
                         {% endif %}
                     </td>
                     <td>{{ invoice.created_at }}</td>
-                    <td>${{ invoice.total_amount }}</td>
+                    <td>£{{ invoice.total_amount }}</td>
                     <td>{{ invoice.status }}</td>
                 </tr>
             {% endfor %}
